# Data-Fetcher

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  dependancies.sh  dependencies.sh  main.cpp
data/: data.json
docs/: TODO.txt  userManual.md
include/: constants.h  dataFetcher.h  fetcher.h  flowControl.h  globals.h  parser.h  tools.h
include/dataFetcher/: dataFetcher.h
src/: dataFetcher.cpp  exception.cpp  exceptions.cpp  fetcher.cpp  flowControl.cpp  inputHandler.cpp  main.cpp  parser.cpp  tools.cpp
src/include/: constants.h  exception.h  exceptions.h  fetcher.h  flowControl.h  inputHandler.h  parser.h
test/: dataFetcher.cpp  exceptions.cpp  fetcher.cpp  fetcherTest1.json  inputHandler.cpp  tools.cpp  toolsTest2.txt  toolsTest4.json  toolsTest5.txt
test/data/: dataFetcherTest3.json  inputHandler6.txt
test/docs/: dataFetcherTest2.json  fetcherTest2.txt
tests/: fetcher.cpp  tools.cpp
tool/: tools.cpp
